--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -156,7 +156,7 @@
     </script>
 
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <!-- Navbar -->
     <nav
       class="navbar navbar-expand-lg fixed-top shadow-sm"
@@ -276,19 +276,19 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-black text-white py-4 ">
-      <div class="container text-center">
-        <p class="mb-1">
-          &copy; 2025 <strong>Elevatr</strong> — All rights reserved.
-        </p>
-        <small class="text-muted">
-          Built with ❤️ • Designed for job seekers • by
-          <a href="https://www.self.so/waqas-rashid-iiwncp" target="_blank" class="text-warning text-decoration-none fw-semibold">
-            Waqas Rashid
-          </a>
-        </small>
-      </div>
-    </footer>
+  <footer class="bg-black text-white py-4">
+    <div class="container text-center">
+      <p class="mb-1">
+        © 2025 <strong>Elevatr</strong> — All rights reserved.
+      </p>
+      <small class="text-muted">
+        Built with ❤️ • Designed for job seekers • by
+        <a href="https://www.self.so/waqas-rashid-iiwncp" target="_blank" class="text-warning text-decoration-none fw-semibold">
+          Waqas Rashid
+        </a>
+      </small>
+    </div>
+  </footer>
     <script>
     function toggleContactForm() {
       const form = document.getElementById("floatingForm");
